Bug 97954 - Unhelpful error message: "modem not unlocked yet"
Summary: Unhelpful error message: "modem not unlocked yet"
Status: RESOLVED FIXED
Alias: None
Product: ModemManager
Classification: Unclassified
Component: mmcli (show other bugs)
Version: git master
Hardware: Other Linux (All)
: medium normal
Assignee: ModemManager bug user
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-27 21:12 UTC by felix
Modified: 2016-09-28 07:30 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description felix 2016-09-27 21:12:27 UTC
When mmcli, which was passed a USSD-related option, detects that a modem needs to be unlocked, it prints out a terse "modem not unlocked yet" message. It doesn't indicate what kind of "unlocking" is needed, leaving the user confused and unable to remedy the problem (--help-all output doesn't even contain the word "lock"); and this is even though mm_modem_get_unlock_required() returns this very information (cli/mmcli-modem-3gpp.c).

Additionally, unlocking is reportedly not needed at all for at least some modems, despite ModemManager claiming otherwise: <https://stackoverflow.com/revisions/31864567/2>
Comment 1 Aleksander Morgado 2016-09-28 07:30:04 UTC
Thanks for the report. This bug was actually a leftover from commit 001f35234e16d7aeb2ed1282ba3b57aea73c5a9e, and has been there for 4 years now...

I've pushed a fix to git master, mm-1-6, mm-1-4 and mm-1-2.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.