mmcli,ussd: don't rely on lock status to allow actions

Commit 001f35234e16d7aeb2ed1282ba3b57aea73c5a9e fixed this very same thing in
all the other interface actions, but 3GPP USSD actions were not fixed.

https://bugs.freedesktop.org/show_bug.cgi?id=97954